logs/socproject.log
Traceback (most recent call last):
  File "/opt/www/SOCProject/app/start.py", line 9, in <module>
    import route
  File "/opt/www/SOCProject/app/route.py", line 5, in <module>
    from handler.admin import main_handler, product_handler, project_handler
  File "/opt/www/SOCProject/app/handler/admin/project_handler.py", line 54
    else:
    ^
IndentationError: expected an indented block
Traceback (most recent call last):
  File "/opt/www/SOCProject/app/start.py", line 9, in <module>
    import route
  File "/opt/www/SOCProject/app/route.py", line 5, in <module>
    from handler.admin import main_handler, product_handler, project_handler
  File "/opt/www/SOCProject/app/handler/admin/product_handler.py", line 11, in <module>
    from logic import product_logic
  File "/opt/www/SOCProject/app/logic/product_logic.py", line 98
    sql = sql + ' and id in () order by createTime asc '        
      ^
IndentationError: expected an indented block
Traceback (most recent call last):
  File "/opt/www/SOCProject/app/start.py", line 9, in <module>
    import route
  File "/opt/www/SOCProject/app/route.py", line 5, in <module>
    from handler.admin import main_handler, product_handler, project_handler
  File "/opt/www/SOCProject/app/handler/admin/project_handler.py", line 11, in <module>
    from logic import project_logic, product_logic
  File "/opt/www/SOCProject/app/logic/project_logic.py", line 134
    
    ^
IndentationError: expected an indented block
Traceback (most recent call last):
  File "/opt/www/SOCProject/app/start.py", line 9, in <module>
    import route
  File "/opt/www/SOCProject/app/route.py", line 5, in <module>
    from handler.admin import main_handler, product_handler, project_handler, task_handler
  File "/opt/www/SOCProject/app/handler/admin/main_handler.py", line 10, in <module>
    import admin_base_handler
  File "/opt/www/SOCProject/app/handler/admin/admin_base_handler.py", line 7, in <module>
    from common import status, redis_cache
ImportError: cannot import name status
